--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tabs"
-        tools:targetApi="31">
+        android:theme="@style/Theme.Scheduler"
+        tools:targetApi="19">
         <activity
             android:name=".LoginActivity"
             android:exported="false">
@@ -53,7 +53,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Tabs.NoActionBar">
+            android:theme="@style/Theme.Scheduler.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
