--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,24 @@
         android:theme="@style/Theme.Scheduler"
         tools:targetApi="19">
         <activity
+            android:name=".BluetoothActivity"
+            android:exported="false"
+            android:label="@string/title_activity_bluetooth"
+            android:theme="@style/Theme.Scheduler.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".BluetoothConnectionsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_bluetooth_connections"
+            android:theme="@style/Theme.Scheduler.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".LoginActivity"
             android:exported="false">
             <meta-data
@@ -59,6 +77,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
